# meson-add

./: .gitignore  README.md  meson.build
src/: add.cc  add.h  main.cc
tests/: gtest_all.cc
